Se añaden más pruebas a MS