@@ -12,7 +12,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -35,96 +35,191 @@ class DespachoServiceTest {
     @InjectMocks
     private DespachoService despachoService;
 
-    private Despacho despachoBase;
-    private Transportista transportistaBase;
+    private Despacho despacho;
+    private Transportista transportista;
 
     @BeforeEach
     void setUp() {
-        despachoBase = new Despacho();
-        despachoBase.setIdDespacho(1L);
-        despachoBase.setIdPedido(500L);
-        despachoBase.setEstadoDespacho("PENDIENTE");
+        transportista = Transportista.builder()
+                .idTransportista(1L)
+                .nombreCompleto("Juan Ramírez")
+                .patenteVehiculo("ABCD-12")
+                .telefonoContacto("+56999999999")
+                .estado("ACTIVO")
+                .build();
 
-        transportistaBase = new Transportista();
-        transportistaBase.setIdTransportista(100L);
+        despacho = Despacho.builder()
+                .idDespacho(1L)
+                .idPedido(10L)
+                .direccionEntrega("Avenida Errázuriz 500")
+                .comunaEntrega("Valparaíso")
+                .estadoDespacho("PENDIENTE")
+                .fechaCreacion(OffsetDateTime.now())
+                .transportista(transportista)
+                .build();
     }
 
+    // ─── listar ──────────────────────────────────────────────────────────────
+
     @Test
-    void listar_DebeRetornarListaDeDespachos() {
-        when(despachoRepository.findAll()).thenReturn(Arrays.asList(despachoBase));
+    void listar_retornaListaDeDespachos() {
+        when(despachoRepository.findAll()).thenReturn(List.of(despacho));
+
         List<Despacho> resultado = despachoService.listar();
-        assertNotNull(resultado);
+
         assertEquals(1, resultado.size());
-        verify(despachoRepository, times(1)).findAll();
+        assertEquals("PENDIENTE", resultado.get(0).getEstadoDespacho());
     }
 
+    // ─── buscarPorId ─────────────────────────────────────────────────────────
+
     @Test
-    void buscarPorId_CuandoExiste_DebeRetornarDespacho() {
-        when(despachoRepository.findById(1L)).thenReturn(Optional.of(despachoBase));
+    void buscarPorId_existente_retornaDespacho() {
+        when(despachoRepository.findById(1L)).thenReturn(Optional.of(despacho));
+
         Despacho resultado = despachoService.buscarPorId(1L);
+
         assertNotNull(resultado);
-        assertEquals(1L, resultado.getIdDespacho());
+        assertEquals(10L, resultado.getIdPedido());
     }
 
     @Test
-    void crear_CuandoPedidoExisteYFechaNula_DebeAsignarFechaYGuardar() {
-        Despacho nuevoDespacho = new Despacho();
-        nuevoDespacho.setIdPedido(500L);
-        nuevoDespacho.setEstadoDespacho("NUEVO");
+    void buscarPorId_noExistente_lanzaExcepcion() {
+        when(despachoRepository.findById(99L)).thenReturn(Optional.empty());
 
-        // Simulamos que ms-ventas responde OK
-        doNothing().when(ventasClient).validarPedido(500L);
-        when(despachoRepository.save(any(Despacho.class))).thenAnswer(i -> i.getArgument(0));
+        RuntimeException ex = assertThrows(RuntimeException.class,
+                () -> despachoService.buscarPorId(99L));
 
-        Despacho resultado = despachoService.crear(nuevoDespacho);
+        assertEquals("Despacho no encontrado", ex.getMessage());
+    }
 
-        assertNotNull(resultado.getFechaCreacion());
-        assertEquals("NUEVO", resultado.getEstadoDespacho());
-        verify(ventasClient, times(1)).validarPedido(500L);
-        verify(despachoRepository, times(1)).save(any(Despacho.class));
+    // ─── crear ────────────────────────────────────────────────────────────────
+
+    @Test
+    void crear_llamaValidarPedidoAntesDePersistir() {
+        Despacho nuevo = Despacho.builder()
+                .idPedido(5L)
+                .direccionEntrega("Alameda 1234")
+                .comunaEntrega("Metropolitana")
+                .estadoDespacho("PENDIENTE")
+                .build();
+
+        doNothing().when(ventasClient).validarPedido(5L);
+        when(despachoRepository.save(any(Despacho.class))).thenReturn(nuevo);
+
+        despachoService.crear(nuevo);
+
+        // La validación del pedido debe ocurrir ANTES de guardar
+        var inOrder = inOrder(ventasClient, despachoRepository);
+        inOrder.verify(ventasClient).validarPedido(5L);
+        inOrder.verify(despachoRepository).save(nuevo);
     }
 
     @Test
-    void crear_CuandoPedidoNoExiste_DebeLanzarExcepcionYNoGuardar() {
-        Despacho nuevoDespacho = new Despacho();
-        nuevoDespacho.setIdPedido(999L); // ID fantasma
+    void crear_sinFechaCreacion_asignaFechaAutomatica() {
+        Despacho sinFecha = Despacho.builder()
+                .idPedido(5L)
+                .estadoDespacho("PENDIENTE")
+                .build();
 
-        // Simulamos que ms-ventas responde con error 404
-        doThrow(new RuntimeException("Error en ms-logistica: El pedido con ID 999 no existe en Ventas."))
+        assertNull(sinFecha.getFechaCreacion());
+
+        doNothing().when(ventasClient).validarPedido(any());
+        when(despachoRepository.save(any(Despacho.class))).thenAnswer(inv -> inv.getArgument(0));
+
+        Despacho resultado = despachoService.crear(sinFecha);
+
+        assertNotNull(resultado.getFechaCreacion(),
+                "Debe asignarse fecha de creación automáticamente");
+    }
+
+    @Test
+    void crear_conFechaExistente_conservaFechaOriginal() {
+        OffsetDateTime fechaOriginal = OffsetDateTime.parse("2025-01-15T10:00:00+00:00");
+        Despacho conFecha = Despacho.builder()
+                .idPedido(5L)
+                .estadoDespacho("PENDIENTE")
+                .fechaCreacion(fechaOriginal)
+                .build();
+
+        doNothing().when(ventasClient).validarPedido(any());
+        when(despachoRepository.save(any())).thenAnswer(inv -> inv.getArgument(0));
+
+        Despacho resultado = despachoService.crear(conFecha);
+
+        assertEquals(fechaOriginal, resultado.getFechaCreacion());
+    }
+
+    @Test
+    void crear_ventasClientFalla_lanzaExcepcionYNoGuarda() {
+        Despacho nuevo = Despacho.builder().idPedido(999L).build();
+
+        doThrow(new RuntimeException("Pedido 999 no existe"))
                 .when(ventasClient).validarPedido(999L);
 
-        // Verificamos que salta la excepción
-        RuntimeException ex = assertThrows(RuntimeException.class, () -> {
-            despachoService.crear(nuevoDespacho);
-        });
-
-        assertEquals("Error en ms-logistica: El pedido con ID 999 no existe en Ventas.", ex.getMessage());
-
-        // VERIFICACIÓN: Nos aseguramos de que no se guardó el despacho fraudulento
-        verify(despachoRepository, never()).save(any(Despacho.class));
+        assertThrows(RuntimeException.class, () -> despachoService.crear(nuevo));
+        verify(despachoRepository, never()).save(any());
     }
 
-    @Test
-    void asignarTransportista_CuandoAmbosExisten_DebeAsignarYGuardar() {
-        when(despachoRepository.findById(1L)).thenReturn(Optional.of(despachoBase));
-        when(transportistaRepository.findById(100L)).thenReturn(Optional.of(transportistaBase));
-        when(despachoRepository.save(any(Despacho.class))).thenAnswer(i -> i.getArgument(0));
+    // ─── asignarTransportista ─────────────────────────────────────────────────
 
-        Despacho resultado = despachoService.asignarTransportista(1L, 100L);
+    @Test
+    void asignarTransportista_exitoso_actualizaDespacho() {
+        when(despachoRepository.findById(1L)).thenReturn(Optional.of(despacho));
+        when(transportistaRepository.findById(1L)).thenReturn(Optional.of(transportista));
+        when(despachoRepository.save(any(Despacho.class))).thenAnswer(inv -> inv.getArgument(0));
+
+        Despacho resultado = despachoService.asignarTransportista(1L, 1L);
 
         assertNotNull(resultado.getTransportista());
-        assertEquals(100L, resultado.getTransportista().getIdTransportista());
-        verify(despachoRepository, times(1)).save(despachoBase);
+        assertEquals("Juan Ramírez", resultado.getTransportista().getNombreCompleto());
+        verify(despachoRepository).save(despacho);
     }
 
     @Test
-    void cambiarEstado_CuandoExiste_DebeActualizarEstadoYGuardar() {
-        when(despachoRepository.findById(1L)).thenReturn(Optional.of(despachoBase));
-        when(despachoRepository.save(any(Despacho.class))).thenAnswer(i -> i.getArgument(0));
+    void asignarTransportista_transportistaNoExistente_lanzaExcepcion() {
+        when(despachoRepository.findById(1L)).thenReturn(Optional.of(despacho));
+        when(transportistaRepository.findById(99L)).thenReturn(Optional.empty());
+
+        RuntimeException ex = assertThrows(RuntimeException.class,
+                () -> despachoService.asignarTransportista(1L, 99L));
+
+        assertEquals("Transportista no encontrado", ex.getMessage());
+        verify(despachoRepository, never()).save(any());
+    }
+
+    // ─── cambiarEstado ────────────────────────────────────────────────────────
+
+    @Test
+    void cambiarEstado_actualizaEstadoCorrectamente() {
+        when(despachoRepository.findById(1L)).thenReturn(Optional.of(despacho));
+        when(despachoRepository.save(any())).thenAnswer(inv -> inv.getArgument(0));
 
         Despacho resultado = despachoService.cambiarEstado(1L, "EN_RUTA");
 
         assertEquals("EN_RUTA", resultado.getEstadoDespacho());
-        verify(despachoRepository, times(1)).save(despachoBase);
+        verify(despachoRepository).save(despacho);
+    }
+
+    @Test
+    void cambiarEstado_despachoNoExistente_lanzaExcepcion() {
+        when(despachoRepository.findById(99L)).thenReturn(Optional.empty());
+
+        assertThrows(RuntimeException.class,
+                () -> despachoService.cambiarEstado(99L, "ENTREGADO"));
+    }
+
+    @Test
+    void cambiarEstado_flujoCompleto_PENDIENTE_a_ENTREGADO() {
+        when(despachoRepository.findById(1L)).thenReturn(Optional.of(despacho));
+        when(despachoRepository.save(any())).thenAnswer(inv -> inv.getArgument(0));
+
+        despachoService.cambiarEstado(1L, "EN_RUTA");
+        assertEquals("EN_RUTA", despacho.getEstadoDespacho());
+
+        despachoService.cambiarEstado(1L, "ENTREGADO");
+        assertEquals("ENTREGADO", despacho.getEstadoDespacho());
+
+        verify(despachoRepository, times(2)).save(despacho);
     }
 }
